# 8V42_Kiegechev_Programming_3sem_lab6

./: CMakeLists.txt
.github/workflows/: release.yml
include/: Application.h
include/controller/: IController.h
include/model/: Document.h  Primitive.h
include/view/: IView.h
src/: Application.cpp  main.cpp
src/controller/: IController.cpp
src/model/: Document.cpp  Primitive.cpp
src/view/: IView.cpp
